libs/wasm-sdk/wasm-sdk-cpp/include/flow_like_sdk.h

inline void trace(const std::string& msg) { _fl_log_trace(msg.data(), msg.size()); }
inline void debug(const std::string& msg) { _fl_log_debug(msg.data(), msg.size()); }
inline void info(const std::string& msg)  { _fl_log_info(msg.data(), msg.size()); }
inline void warn(const std::string& msg)  { _fl_log_warn(msg.data(), msg.size()); }
inline void error(const std::string& msg) { _fl_log_error(msg.data(), msg.size()); }
inline std::string get_input(const std::string& name) {
    int64_t packed = _fl_get_input(name.data(), name.size());
    return unpack_string(packed);
}
inline void set_output(const std::string& name, const std::string& json_value) {
    _fl_set_output(name.data(), name.size(), json_value.data(), json_value.size());
}
inline void activate_exec(const std::string& name) {
    _fl_activate_exec(name.data(), name.size());
}
inline std::string get(const std::string& name) {
    return unpack_string(_fl_var_get(name.data(), name.size()));
}
inline void set(const std::string& name, const std::string& value) {
    _fl_var_set(name.data(), name.size(), value.data(), value.size());
}
inline bool has(const std::string& name) {
    return _fl_var_has(name.data(), name.size()) != 0;
}
inline std::string get(const std::string& key) {
    return unpack_string(_fl_cache_get(key.data(), key.size()));
}
inline void set(const std::string& key, const std::string& value) {
    _fl_cache_set(key.data(), key.size(), value.data(), value.size());
}
inline bool has(const std::string& key) {
    return _fl_cache_has(key.data(), key.size()) != 0;
}
inline void emit(const std::string& event_type, const std::string& data) {
    _fl_stream_emit(event_type.data(), event_type.size(), data.data(), data.size());
}
inline void text(const std::string& t) {
    _fl_stream_text(t.data(), t.size());
}
inline bool is_streaming()    { return _fl_is_streaming() != 0; }
inline int64_t time_now()     { return _fl_time_now(); }
inline int64_t random()       { return _fl_random(); }